<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:clipToPadding="false"
        android:scrollIndicators="top|bottom"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/recipe_detail_textview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="15dp"
            android:textSize="18sp" />
    </ScrollView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />


</LinearLayout>


